# TPRE612

./: .gitignore  .gitmodules  CREATE_TPRE612_DATA_WAREHOUSE.sql  MCD.loo  README.md  TPRE612_.sql  TPRE612_DATA_WAREHOUSE.sql  etl.py  export_first_rows_from_tables.py  main.py  pyproject.toml  test.sql  view_ontqzdqzdd_details.csv
data/: eurostat_rail_data.csv  flatfile_FIGARO-e_AEM_Gg_CO2e_2015.csv
data/opendata/: flatfile_FIGARO-e_AEM_Gg_2015.csv
src/api/: README.md  main.py
src/api/db/: database.py
src/api/models/: models.py
src/api/routers/: gares.py  main.py  operateurs.py  routes.py  stats.py  trains.py  trajets.py
src/api/schemas/: schemas.py
src/etl/: CO2.py  data-gouv.py  data_gouv.py  dataeuropa.py  etl_opdi.py  eurostat.py  gestion_etl.py  night-train-data.py  night_train_data.py  open-data.py  sncf.py  transitland.py
src/etl/populate_data_warehouse/: database.py  dim_date.py  dim_energie.py  dim_gare.py  dim_operateur.py  dim_route.py  dim_train.py  fact_trajet_train.py  populate_all.py
